Simple get/set for play heads
